2007-06-21  Dmitry Dulepov  <dmitry@typo3.org>

 + DS title for static data structures can use 'LLL:' translation
 # Fix: wrong element position if element is inserted using old page module
 # Fix: unnecessary loop while generating TS during mapping
 # Fixed bug #5679: "Create new Template Object" stopped working in 1.3.1

2007-05-09  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.1

2007-02-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Changed hook parameter names in class.tx_templavoila_access.php

2007-03-24  Kasper Skaarhoej
 # Fixed bug that the Page module would not show page structure if a Template Object value was set but not the Data Structure

2007-02-20  Dmitry Dulepov  <dmitry@typo3.org>

 # Fix: wrong check for null in class.tx_templavoila_tcemain.php
 + Added access control for creation, modification and deletion of FCEs inside TCEmain (using hooks) and for TCEForms (requires hook in core!)
 + Added icon to mod1 to show when FCE editing is disabled

2007-02-19  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed wrong character encoding in mod1 if forceCharset is empty
 # Fixed bug 4967: Disallowed DS/TO are available in Pagewizard
 # Fixed bug 4975: SQL errors with Templavoila/DBAL/PostgreSQL: TV Control Center: Show Details
 # Fixed bug 4997: SQL error with Templavoila/DBAL/PostgreSQL: Editing templates

2007-02-15  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed wrong column name in SQL query (class.tx_templavoila_referenceelementswizard.php)

2007-02-05  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.0

2007-01-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed character conversion problem that appeared in 1.2.0
 # Fixed empty field values in "Page related information" tab (bug #4576)
 # Fixed problem with preserving <meta> tag during "Modify DS/TO" (this allows me_templavoilalayout and localization to retain its data)
 # Fixed bug #3143: New Content Element is created as Reference